syntax = "proto3";
package scope_permission;

option go_package = "nfxid/protos/gen/access/scope_permission;scopepermissionpb";

import "google/protobuf/timestamp.proto";

// 范围权限关联信息
message ScopePermission {
  string id = 1;                  // 关联ID (UUID)
  string scope = 2;               // 范围标识符 (varchar(255))
  string permission_id = 3;       // 权限ID (UUID)
  google.protobuf.Timestamp created_at = 4; // 创建时间
}

// ScopePermission 服务 - 供其他服务通过 gRPC 管理范围权限关联
service ScopePermissionService {
  // 根据ID获取范围权限关联
  rpc GetScopePermissionByID (GetScopePermissionByIDRequest) returns (GetScopePermissionByIDResponse);
  
  // 根据范围获取权限列表
  rpc GetPermissionsByScope (GetPermissionsByScopeRequest) returns (GetPermissionsByScopeResponse);
  
  // 根据权限获取范围列表
  rpc GetScopesByPermission (GetScopesByPermissionRequest) returns (GetScopesByPermissionResponse);
}

// ScopePermission Service Messages
message GetScopePermissionByIDRequest {
  string id = 1;
}

message GetScopePermissionByIDResponse {
  ScopePermission scope_permission = 1;
}

message GetPermissionsByScopeRequest {
  string scope = 1;
}

message GetPermissionsByScopeResponse {
  repeated ScopePermission scope_permissions = 1;
}

message GetScopesByPermissionRequest {
  string permission_id = 1;
}

message GetScopesByPermissionResponse {
  repeated ScopePermission scope_permissions = 1;
}
